--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "dependencies": {    
     "@prisma/client": "^5.16.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.7",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.0.0",
     "formidable": "^3.5.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.263.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
